--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <h2 class="project-tagline">Henry Xu</h2>
+      <!-- <p class="custom-header-content">Henry Xu</p> -->
       {% if site.github.is_project_page %}
         <a href="https://github.com/HenryXII/Faithful-CBM" class="btn">Code</a>
       {% endif %}
@@ -25,7 +26,6 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
-      <p class="custom-header-content">Henry Xu</p>
     </header>
 
     <main id="content" class="main-content" role="main">
