--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,8 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+      <h1 class="project-name">Faithful CBM</h1>
       <h2 class="project-tagline">Henry Xu</h2>
-      <!-- <p class="custom-header-content">Henry Xu</p> -->
       {% if site.github.is_project_page %}
         <a href="https://github.com/HenryXII/Faithful-CBM" class="btn">Code</a>
       {% endif %}
