--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{page.title}}</h1>
-      <h2 class="project-tagline">Henry Xu</h2>
+      <h2 class="project-tagline">Henry Xu, Mentor: Lily Weng</h2>
       {% if site.github.is_project_page %}
         <a href="https://github.com/HenryXII/Faithful-CBM" class="btn">Code</a>
       {% endif %}
